--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,46 @@
-<form accept-charset="UTF-8"  action="/users" method="post">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+<!--
+  <form accept-charset="UTF-8"  action="/users" method="post">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
-  <label for="user[username]">Username</label>
-  <input type="text" name="user[username]" id="user[username]"><br>
+    <label for="user[username]">Username</label>
+    <input type="text" name="user[username]" id="user[username]"><br>
 
-  <label for="user[email]">Email</label>
-  <input type="email" name="user[email]" id="user[email]"><br>
+    <label for="user[email]">Email</label>
+    <input type="email" name="user[email]" id="user[email]"><br>
 
-  <label for="user[password]">Password</label>
-  <input type="password" name="user[password]" id="user[password]"><br>
+    <label for="user[password]">Password</label>
+    <input type="password" name="user[password]" id="user[password]"><br>
 
-  <input type="submit" value="Submit">
-</form> 
+    <input type="submit" value="Submit">
+  </form> 
+-->
+
+
+<%- form_tag('/users', method: 'post') do -%>
+
+  <%- label_tag(:username, 'Username') -%>
+  <%- text_field_tag(:username) -%>
+
+  <%- label_tag(:email, 'Email') -%>
+  <%- email_field_tag(:email) -%>
+
+  <%- label_tag(:password, 'Password') -%>
+  <%- password_field_tag(:password) -%>
+
+  <%- submit_tag("Search") -%>
+<%- end -%>
+
+
+<%= form_for @user do |f| %>
+
+  <%= f.label :username %>
+  <%= f.text_field :username, placeholder: "Your username here" %>
+
+  <%= f.label :email %>
+  <%= f.email_field :email, placeholder: "example@example.com" %>
+
+  <%= f.label :password %>
+  <%= f.password_field :password, placeholder: "Enter password" %>
+
+  <%= f.submit "Create" %>
+<% end %>
