--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -32,6 +32,7 @@
 
 
 <%= form_for @user do |f| %>
+	<%= render 'error_messages' %>
 
   <%= f.label :username %>
   <%= f.text_field :username, placeholder: "Your username here" %>
